--- a/ServerCore/ServerCore.csproj
+++ b/ServerCore/ServerCore.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Spinlock.cs" />
+    <Compile Remove="Context_Switching.cs" />
   </ItemGroup>
 
 </Project>
