Cache, MemoryBarrier,Interlocked

--- a/ServerCore/ServerCore.csproj
+++ b/ServerCore/ServerCore.csproj
@@ -7,9 +7,12 @@
 
   <ItemGroup>
     <Compile Remove="AutoResetEvents.cs" />
+    <Compile Remove="cache.cs" />
     <Compile Remove="Compiler.cs" />
     <Compile Remove="Context_Switching.cs" />
     <Compile Remove="Lock.cs" />
+    <Compile Remove="MemoryBarrier.cs" />
+    <Compile Remove="Program.cs" />
     <Compile Remove="ReaderWriterLocks.cs" />
     <Compile Remove="ReaderWriterLock_Practice.cs" />
     <Compile Remove="Spinlock.cs" />
