--- a/ServerCore/ServerCore.csproj
+++ b/ServerCore/ServerCore.csproj
@@ -12,6 +12,8 @@
     <Compile Remove="Context_Switching.cs" />
     <Compile Remove="Interlocked.cs" />
     <Compile Remove="Lock.cs" />
+    <Compile Remove="Lock_1129.cs" />
+    <Compile Remove="Lock_Basic.cs" />
     <Compile Remove="MemoryBarrier.cs" />
     <Compile Remove="Program.cs" />
     <Compile Remove="ReaderWriterLocks.cs" />
